# duckdb-sql-ctf

./: .gitignore  CLAUDE.md  README.md  TODO.md  fichier.md  mise.toml  scenarios_internal.md  scenarios_player.md
answer_checker/: Dockerfile  invoke_local.py  pyproject.toml
answer_checker/src/answer_checker/: compactor.py  event_writer.py  handler.py  hint_event.py  mission_control.py  recorder.py  register.py  validator.py
answer_checker/tests/: conftest.py  test_compactor.py  test_event_writer.py  test_handler.py  test_recorder.py  test_validator.py
data_generator/: pyproject.toml  test_graph.sql
data_generator/src/data_generator/: config.py  constants.py  entrypoint.py
data_generator/src/data_generator/generators/: __init__.py  scenario0_csv.py  scenario1_logs.py  scenario2_parquet.py  scenario3_postgres.py  scenario4_graph.py  scenario4_iceberg.py  scenario5_graph.py
data_generator/src/data_generator/models/: csv_models.py  json_models.py  parquet_models.py  pg_models.py
data_generator/src/data_generator/solutionators/: _common.py  scenario1_logs.py  scenario2_parquet.py  scenario3_postgres.py  scenario4_iceberg.py  scenario5_graph.py  scenario6_geocode.py
data_generator/tests/: conftest.py  test_config.py  test_scenario1.py  test_scenario2.py  test_scenario3.py  test_solutionator_scenario1.py  test_solutionator_scenario2.py  test_solutionator_scenario3.py  test_solutionator_scenario4.py  test_solutionator_scenario5.py  test_solutionator_scenario6.py
docs/: agent.js  app.js  data-agent.js  index.html  le-canard-enchaine-11-mai-2026.md  solutions.md  (+5 more)
(+38 files in other folders)
