[project]
name = "answer-checker"
version = "0.1.0"
description = "Lambda answer checker for DuckDB SQL CTF"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2",
    "pyarrow>=19",
    "boto3>=1.36",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "moto[s3,server]>=5",
    "mypy>=1.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/answer_checker"]

[tool.mypy]
ignore_missing_imports = true
