[project]
name = "data-generator"
version = "0.1.0"
description = "Data generator for DuckDB SQL CTF"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15",
    "sqlmodel>=0.0.24",
    "faker>=37",
    "boto3>=1.36",
    "pyarrow>=19",
    "duckdb>=1.1",
    "psycopg2-binary>=2.9",
    "mypy>=1.19.1",
]

[project.scripts]
ctf-generate = "data_generator.entrypoint:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_generator"]

[tool.mypy]
ignore_missing_imports = true
